<resources>
    <string name="app_name">CodeMath</string>
    <string name="calculate">Calculate</string>
    <string name="bill_amount_hint">Enter bill amount</string>
    <string name="default_tip_percentage">Tip Percentage: %1$d%%</string>
    <string name="default_tip_amount">Tip: $0.00</string>
    <string name="default_total_amount">Total: $0.00</string>
    <string name="tip_percentage">Tip Percentage: %1$d%%</string>
    <string name="tip_amount">Tip Amount: $%1$.2f</string>
    <string name="total_amount">Total Amount: $%1$.2f</string>
    <string name="number_of_people_hint">Number of People</string>
    <string name="no_rounding">No Rounding</string>
    <string name="round_tip">Round Tip</string>
    <string name="round_total">Round Total</string>
    <string name="amount_per_person">Amount Per Person: $%1$.2f</string>
    <!-- Add any other strings you referenced in your code -->
</resources>
