<!-- This is your activity_main.xml layout for the CodeMath app -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/billAmountTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/billAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_amount_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberOfPeopleTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/totalAmountTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/numberOfPeopleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_people_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- SeekBar for selecting the tip percentage -->
    <SeekBar
        android:id="@+id/tipPercentageSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="15"
        app:layout_constraintTop_toBottomOf="@id/billAmountTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView for showing the selected tip percentage -->
    <TextView
        android:id="@+id/tipPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_tip_percentage"
        app:layout_constraintTop_toBottomOf="@id/tipPercentageSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/amountPerPersonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/roundingOptionsRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/calculateButton"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundingOptionsRadioGroup" />


    <!-- TextView for displaying the calculated tip amount -->
    <TextView
        android:id="@+id/tipAmountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_tip_amount"
        app:layout_constraintTop_toBottomOf="@id/tipPercentageTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"/>

    <!-- TextView for displaying the total amount including tip -->
    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_total_amount"
        app:layout_constraintTop_toBottomOf="@id/tipAmountTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="18sp"/>

    <!-- RadioGroup for rounding options -->
    <RadioGroup
        android:id="@+id/roundingOptionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/numberOfPeopleTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/noRoundingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_rounding" />

        <RadioButton
            android:id="@+id/roundTipRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_tip" />

        <RadioButton
            android:id="@+id/roundTotalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_total" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
